Fixed Multithreading bug by replacing lists with vectors. Fixed jumping bug by applying the keyListener at the right fucking component (looking at you, Emil). Fixed little math bug in collision, which allowed you to briefly touch pillar without dieing. Added death in case of leaving the Screen to the top or the bottom. Added score display in the top left corner.